<resources>
    <string name="app_name">하루듣기</string>

    <!-- List Fragment String -->
    <string name="item_record_done">Done</string>
    <string name="item_record_today">당신의 하루를\n들려주세요</string>
    <string name="item_record_permission_title">권한 요구</string>
    <string name="item_record_permission_msg"> 일기를 녹음하고 저장할 때 아래 두 권한이 필요합니다 !\n
        - 마이크 사용 권한\n
        - 내부저장소 쓰기 권한
    </string>
    <string name="permission_denied">권한 허용이 필요합니다 !</string>
    <string name="item_record_hash_tag_hint">엔터를 누르면 태그가 입력됩니다 !</string>
    <string name="deep_affects_base_url">https://proxy.api.deepaffects.com/audio/generic/api/v2/</string>
    <string name="item_record_no_voice_file">일기를 먼저 녹음해주세요 !</string>
    <string name="item_record_emotion_not_selected">오늘의 기분을 선택해주세요 !</string>
    <string name="item_record_emotion_analyze_fail">감정 분석을 실패했습니다</string>
    <string name="item_record_now_recording">일기 작성을 마쳐주세요 !</string>
    <string name="item_record_save_fail">일기 저장을 실패하였습니다.</string>
    <string name="item_record_save_success">일기 저장에 성공하였습니다.</string>
    <string name="item_record_time_out">최대 녹음 시간을 초과하셨습니다 ! 자동으로 종료됩니다 !</string>
    <string name="item_record_load_diary_list_fail">일기 불러오기를 실패했습니다 !</string>
    <string name="item_record_file_not_found">저장된 일기 파일을 찾을 수 없습니다 !</string>

    <string name="setting_permission_load_title">권한 요청</string>
    <string name="setting_permission_load_rational_msg">복원시 아래 권한이 필요합니다 !\n
    - 내부저장소 쓰기 권한</string>

    <string name="max_time">60초</string>
    <string name="time_out_message_up">일기 녹음이</string>
    <string name="time_out_message_down">후에 종료됩니다</string>

    <string name="analyze_ignore">인터넷 연결이 되어있지 않아서 감정 분석 기능이 수행되지 않습니다 !</string>
    <string name="popup_dialog_title">분석된 감정 결과입니다</string>
    <string name="popup_dialog_record_finish">녹음 종료</string>
    <string name="popup_dialog_ok">확인</string>
    <string name="recording">일기 녹음</string>
    <string name="do_backup">백업중입니다 !</string>
    <string name="do_load">내려받기중입니다 !</string>

    <string name="not_login">로그인 먼저 해주세요 !</string>
    <string name="backup_success">저장 완료 !</string>
    <string name="backup_fail">백업 실패</string>
    <string name="load_success">불러오기 완료</string>
    <string name="load_fail">불러오기 실패</string>
    <string name="backup_start">백업 시작</string>
    <string name="download_start">백업 시작</string>
    <string name="record_done">녹음이 완료되었습니다! 감정을 분석해보세요 </string>
    <string name="record_title_default">오늘 하루를 목소리로 기록하세요</string>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Statistics Fragment -->
    <string name="graph_title">일주일 간의 감정 그래프</string>
    <string name="hash_tag_title">Hash Tag</string>
    <string name="statistics_selected_emotion">선택한 감정</string>
    <string name="statistics_analyzed_emotion">분석한 감정</string>

    <string name="mad">😡</string>
    <string name="bad">😞</string>
    <string name="normal">😐</string>
    <string name="good">😊</string>
    <string name="happy">😍</string>

    <!-- Recall Fragment-->
    <string name="delete_recall_message">추억을 삭제하였습니다.</string>
    <string name="emotion_0_to_title">불행했던 날들</string>
    <string name="emotion_1_to_title">슬픈 날들</string>
    <string name="emotion_2_to_title">그저그런 날들</string>
    <string name="emotion_3_to_title">즐거웠던 날들</string>
    <string name="emotion_4_to_title">행복했던 날들</string>

    <string name="delete_recall_dialog_title">추억 삭제</string>
    <string name="delete_recall_dialog_message">정말로 삭제하시겠습니까?</string>
    <string name="delete_recall_dialog_button">삭제</string>
    <string name="delete_recall_dialog_cancel">취소</string>

    <!-- Play activity -->
    <string name="play">PLAY</string>
    <string name="playing_state_stop_message">일기재생을 정지합니다.</string>
    <string name="playing_state_play_message">일기를 재생합니다.</string>
    <string name="no_playlist_message">재생목록이 없습니다.</string>

    <!--Setting-->
    <string name="setting_title">설정</string>
    <string name="setting_alarm">알람</string>
    <string name="setting_password">비밀번호</string>
    <string name="setting_login">로그인</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_backup">백업하기</string>
    <string name="setting_restore">내려받기</string>

    <!-- Initialization -->
    <string name="setting_initialization">초기화</string>
    <string name="setting_initialization_success">초기화에 성공하였습니다.</string>
    <string name="dialog_initialization_message">정말로 초기화 하시겠습니까? 모든 추억들이 사라집니다.</string>
    <string name="dialog_initialization_cancel">취소</string>

    <!--Toolbar title-->
    <string name="main_toolbar_diary_title">일기</string>
    <string name="main_toolbar_statistics_title">통계</string>
    <string name="main_toolbar_recall_title">추억</string>

    <!--Password-->
    <string name="password_title">비밀번호</string>
    <string name="password_current_text">현재 비밀번호</string>
    <string name="password_change_text">비밀 번호 변경</string>
    <string name="password_check_text">비밀번호 확인</string>
    <string name="password_set_text">비밀 번호 설정</string>
    <string name="password_unlock_text">비밀 번호를 해제해주세요.</string>
    <string name="password_lock_success_text">비밀번호 설정이 완료되었습니다.</string>
    <string name="password_before_input_text">이전 비밀번호를 입력해주세요.</string>
    <string name="password_limit_number">1234567890</string>
    <string name="password_not_set_text">Password Not Set</string>
    <string name="password_explain_text">비밀번호를 사용하여 화면 잠금을 해제할 수 있습니다.</string>
    <string name="password_retry_input_text">다시 입력해주세요.</string>
    <string name="password_please_input_text">비밀번호를 입력해주세요.</string>
    <string name="password_check_retry_text">확인을 위해 한번 더 입력해주세요.</string>
    <string name="password_delete_text">Delete</string>
    <string name="password_clear_text">Clear</string>
    <string name="password_lock_change_success_text">비밀번호 변경이 완료되었습니다.</string>

    <!--Alarm-->
    <string name="alarm_title">알람</string>
    <string name="alarm_explain">시간을 설정해주세요.</string>
    <string name="alarm_button_click_text">버튼을 눌러 알람을 설정해주세요.</string>
    <string name="alarm_time_select_text">시간 선택</string>
    <string name="alarm_set_text">알람 설정이 완료되었습니다.</string>
    <string name="alarm_error_text">오류</string>
    <string name="alarm_modify_text">시간을 수정해주세요.</string>
    <string name="alarm_description_text">매일 %s 에 알람이 울립니다.</string>

    <!--login-->
    <string name="login_success">로그인</string>
    <string name="logout_success">로그아웃</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_password_select">PasswordSelectActivity</string>

    <!--kakao-->
    <string name="kakao_description">%s의 기분은 %s입니다. 목소리를 분석한 결과는 %s입니다.</string>

</resources>
