<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="team_h.boostcamp.myapplication.view.password.PasswordActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.password.PasswordActivity">

        <RelativeLayout
            android:id="@+id/rl_password_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@android:color/white"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_password_back_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layout_margin"
                android:onClick="@{v->activity.onPasswordButton(v.getId())}"
                android:src="@drawable/back_button" />

            <TextView
                android:id="@+id/tv_password_title"
                style="@style/SubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/password_title" />

            <TextView
                android:id="@+id/tv_password_done_button"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:onClick="@{v->activity.onPasswordButton(v.getId())}"
                android:text="Done" />

        </RelativeLayout>

        <Switch
            android:id="@+id/switch_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gutter"
            android:layout_marginTop="@dimen/layout_margin"
            android:switchMinWidth="20dp"
            android:trackTint="@color/all_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_password_toolbar" />

        <LinearLayout
            android:id="@+id/ll_password_layouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_password">


            <TextView
                style="@style/TextButtonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/password_current_text" />

            <EditText
                android:id="@+id/et_password_current"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="@dimen/layout_gutter"
                android:background="@drawable/bg_hash_tag_edittext" />

            <TextView
                style="@style/TextButtonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/password_change_text" />

            <EditText
                android:id="@+id/et_password_change"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="@dimen/layout_gutter"
                android:background="@drawable/bg_hash_tag_edittext" />

            <TextView
                style="@style/TextButtonNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/password_check_text" />

            <EditText
                android:id="@+id/et_password_check"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="@dimen/layout_gutter"
                android:background="@drawable/bg_hash_tag_edittext" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
