<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="teamh.boostcamp.myapplication.view.setting.SettingActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.setting.SettingActivity"
        tools:showIn="@layout/activity_setting">

        <RelativeLayout
            android:id="@+id/setting_alarm_to_alarm"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:elevation="@dimen/setting_elevation"
            android:onClick="@{v-> activity.onButtonClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/title_margin_left"
                style="@style/explain_style_black"
                android:text="@string/setting_alarm"
                 />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:src="@drawable/ic_setting_right" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:background="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_setting_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:elevation="@dimen/setting_elevation"
            android:onClick="@{v-> activity.onButtonClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/title_margin_left"
                android:text="@string/setting_password"
                style="@style/explain_style_black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:src="@drawable/ic_setting_right" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:background="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_password" />

        <RelativeLayout
            android:id="@+id/rl_setting_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:elevation="@dimen/setting_elevation"
            android:onClick="@{v-> activity.onButtonClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_password">

            <TextView
                android:id="@+id/rl_setting_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/title_margin_left"
                android:text="@string/setting_login"
                style="@style/explain_style_black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:src="@drawable/ic_setting_right" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:background="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_password" />


        <RelativeLayout
            android:id="@+id/rl_setting_logout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@android:color/white"
            android:elevation="@dimen/setting_elevation"
            android:onClick="@{v-> activity.onButtonClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/title_margin_left"
                android:text="@string/setting_logout"
                style="@style/explain_style_black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:src="@drawable/ic_setting_right" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:background="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_password" />

        <RelativeLayout
            android:id="@+id/rl_setting_backup"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@android:color/white"
            android:elevation="@dimen/setting_elevation"
            android:onClick="@{v-> activity.onButtonClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/title_margin_left"
                android:text="@string/setting_backup"
                style="@style/explain_style_black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:src="@drawable/ic_setting_right" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:background="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_password" />


        <RelativeLayout
            android:id="@+id/rl_setting_restore"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@android:color/white"
            android:elevation="@dimen/setting_elevation"
            android:onClick="@{v-> activity.onButtonClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/title_margin_left"
                android:text="@string/setting_restore"
                style="@style/explain_style_black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:src="@drawable/ic_setting_right" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:background="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_password" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.1dp"
            android:background="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_password" />

        <RelativeLayout
            android:id="@+id/rl_setting_initialization"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@android:color/white"
            android:elevation="@dimen/setting_elevation"
            android:onClick="@{v-> activity.onButtonClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_setting_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/title_margin_left"
                android:text="@string/setting_initialization"
                style="@style/password_subtitle_style"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:src="@drawable/ic_setting_right" />

        </RelativeLayout>


    </LinearLayout>
</layout>
